plugins/kotlin/jvm/k2/testData/scratch/unresolved.output
Compilation failed: warning: the argument '-Xuse-fir-lt' is deprecated since Kotlin 2.4.20. It will be removed in one of the future releases. The light tree mode is enabled by default, and it will become the only available mode in one of the future releases.
unresolved.kts:1:1: error: unresolved reference 'foo'.
foo()
^
